--- a/Lab13/Lab13.html
+++ b/Lab13/Lab13.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="importmap">
-        {
-            "imports": {
-                "three": "./Lib/three.module.min.js",
-                "three/addons/": "https://unpkg.com/three@0.158.0/examples/jsm/",
-                "mindar-image-three": "https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-three.prod.js"
-            }
-        }
-    </script>
+		  {
+		    "imports": {
+		     "three": "./Lib/three.module.min.js",
+		     "three/addons/": "https://unpkg.com/three@0.158.0/examples/jsm/",
+			"mindar-image-three":"https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-three.prod.js"
+		    }
+		  }
+		</script>
     <script type="module" src="./Lab13.js"></script>
 </head>
 <body>
     <a-scene>
-        <a-sphere position="0 0 -5" radius="1" color="red"></a-sphere>
-        <a-camera></a-camera>
+        <a-entity id="modelContainer"></a-entity>
     </a-scene>
 </body>
 </html>
