--- a/Lab13/Lab13.html
+++ b/Lab13/Lab13.html
@@ -15,8 +15,8 @@
     <script type="module" src="./Lab13.js"></script>
 </head>
 <body>
-    <a-scene xr>
-        <a-entity id="modelContainer" arjs="sourceType: webcam;"></a-entity>
+    <a-scene>
+        <a-entity id="modelContainer"></a-entity>
     </a-scene>
 </body>
 </html>
